--- a/package.json
+++ b/package.json
@@ -1,18 +1,17 @@
 {
   "name": "back",
   "version": "1.0.0",
-  "description": "",
+  "description": "Backend for Burger House MERN application",
   "main": "index.js",
   "scripts": {
-    "dev": "backpack",
-    "build": "backpack build",
+    "start": "node index.js",
+    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.6.8",
-    "backpack-core": "^0.8.4",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
@@ -23,5 +22,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.1",
     "nodemailer": "^6.9.13"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   }
 }
