--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "back",
   "version": "1.0.0",
   "description": "Backend for Burger House MERN application",
-  "main": "src/index.js", 
+  "main": "src/index.js",
   "scripts": {
-    "start": "node src/index.js", 
+    "start": "node src/index.js",
     "dev": "nodemon src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -24,6 +24,7 @@
     "nodemailer": "^6.9.13"
   },
   "devDependencies": {
+    "@flydotio/dockerfile": "^0.7.10",
     "nodemon": "^2.0.22"
   }
 }
